# bi-predictive-analytics-platform

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose-prod.yml  docker-compose.yml  env-example.md  github-ci-cd.yml  gitignore-file.md  prophet-model.py  pyproject.toml  repository_files_checklist.csv  requirements-dev.txt  requirements.txt  script (1).py  script (2).py  script (3).py  script.py  setup.py  src-core-config.py
src/: main.py
